fix: pagination functional

--- a/Style/style.css
+++ b/Style/style.css
@@ -179,4 +179,12 @@ body header {
   border-bottom-right-radius: 5px;
 }
 
+.visibility-hidden {
+  visibility: hidden;
+}
+
+.hidden {
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
